--- a/String_Exercise_1.ipynb
+++ b/String_Exercise_1.ipynb
@@ -227,22 +227,17 @@
       "metadata": {
         "id": "RV_OtvWP8tzH",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f340d607-f55b-431d-e8dd-710abc9f480c"
+        "outputId": "d9f22f83-da6b-48ae-981b-2c3dd55c343a"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-10d42bda810f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"python\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'yth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: upper() takes no arguments (1 given)"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PYTHON\n"
           ]
         }
       ]
